fix footer being too wide

--- a/stylus/framework/footer.styl
+++ b/stylus/framework/footer.styl
@@ -3,7 +3,7 @@
 	left: 0
 	bottom: 0
 	position: fixed
-	width: 100%
+	right: 0
 	height: footer-height
 	margin-left: client-navigation-width
 	background: chat-background
